--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Frontend - Test
         # the VITE_API_URL was removed and /api/endpoint was hardcoded but how to deal with this?
         # env:
-        # VITE_API_URL: "http://localhost:4000" # check the behaviour of the GitHub Actions Container re: localhost
+        #   VITE_API_URL: "http://localhost:4000" # (check the behaviour of the GitHub Actions Container re: localhost)
         run: cd frontend && npm run test
 
       - name: Frontend - Build Check
