--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      
       - name: Build the Docker Images
         run: |
-          docker build -t bazmurphy/cloud-tracker-database:latest ./database
-          docker build -t bazmurphy/cloud-tracker-backend:latest ./backend
-          docker build -t bazmurphy/cloud-tracker-frontend:latest ./frontend
+          pwd
+          ls -la
+          docker build -t bazmurphy/cloud-tracker-database:latest /database
+          docker build -t bazmurphy/cloud-tracker-backend:latest /backend
+          docker build -t bazmurphy/cloud-tracker-frontend:latest /frontend
 
       - name: Login to DockerHub
         env:
@@ -59,7 +62,7 @@ jobs:
       #   run: ssh ec2 'cd cloud-tracker && git pull'
 
       - name: Pull the latest Docker Images from DockerHub
-        run: docker
+        run: ssh ec2 'docker pull bazmurphy/cloud-tracker-database:latest bazmurphy/cloud-tracker-backend:latest bazmurphy/cloud-tracker-frontend:latest'
 
       - name: Restart the Containers
         # might need to pass in -e environment variables (also look into secrets)
