--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,14 +12,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout the Code
+        uses: actions/checkout@v4
       
       - name: Build the Docker Images
         run: |
           pwd
           ls -la
-          docker build -t bazmurphy/cloud-tracker-database:latest /database
-          docker build -t bazmurphy/cloud-tracker-backend:latest /backend
-          docker build -t bazmurphy/cloud-tracker-frontend:latest /frontend
+          docker build -t bazmurphy/cloud-tracker-database:latest database
+          docker build -t bazmurphy/cloud-tracker-backend:latest backend
+          docker build -t bazmurphy/cloud-tracker-frontend:latest frontend
 
       - name: Login to DockerHub
         env:
