--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,11 @@ jobs:
 
       - name: Build the Docker Images
         run: |
-          docker build -t bazmurphy/cloud-tracker-database:latest /database
-          docker build -t bazmurphy/cloud-tracker-backend:latest /backend
-          docker build -t bazmurphy/cloud-tracker-frontend:latest /frontend
+          pwd
+          ls -la
+          docker build -t bazmurphy/cloud-tracker-database:latest database
+          docker build -t bazmurphy/cloud-tracker-backend:latest backend
+          docker build -t bazmurphy/cloud-tracker-frontend:latest frontend
 
       - name: Login to DockerHub
         env:
