--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,14 @@
 version: "3"
 
+# Adjusted Local Images version in favour of DockerHub hosted Images
+
 services:
   database:
     container_name: database
-    # networks:
-    #   - cloud-tracker-network
-    build:
-      context: ./database
-      dockerfile: database.Dockerfile
-      args:
-        - POSTGRES_USER=${POSTGRES_USER}
-        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    image: bazmurphy/cloud-tracker-database:latest
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
@@ -18,78 +16,22 @@ services:
 
   backend:
     container_name: backend
-    # networks:
-    #   - cloud-tracker-network
+    image: bazmurphy/cloud-tracker-backend:latest
     depends_on:
       - database
-    build:
-      context: ./backend
-      dockerfile: backend.Dockerfile
-      args:
-        - DB_CONNECTION_STRING=${DB_CONNECTION_STRING}
-        - DB_SSL=${DB_SSL}
+    environment:
+      - DB_CONNECTION_STRING=${DB_CONNECTION_STRING}
+      - DB_SSL=${DB_SSL}
     ports:
       - "4000:4000"
 
   frontend:
     container_name: frontend
-    # networks:
-    #   - cloud-tracker-network
+    image: bazmurphy/cloud-tracker-frontend:latest
     depends_on:
-      - database
       - backend
-    build:
-      context: ./frontend
-      dockerfile: frontend.Dockerfile
-      # args:
-      # - VITE_API_URL=${VITE_API_URL}
     ports:
       - "80:80"
 
-  # ATTEMPT TO SEPARATE frontend and nginx (best practise?):
-
-  # frontend:
-  #   container_name: frontend
-  #   depends_on:
-  #     - database
-  #     - backend
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: frontend.Dockerfile
-  #     args:
-  #       - VITE_API_URL=${VITE_API_URL}
-  # volumes:
-  # - frontend-dist:/frontend/dist
-
-  # nginx:
-  #   container_name: nginx
-  #   # networks:
-  #   #   - cloud-tracker-network
-  #   depends_on:
-  #     - frontend
-  #   build:
-  #     context: ./nginx
-  #     dockerfile: nginx.Dockerfile
-  #     # args:
-  #     #   - FRONTEND_DIST=./frontend/dist
-  #   # volumes:
-  #   # - frontend-dist:/usr/share/nginx/html
-  #   ports:
-  #     - "80:80"
-
-#
-# Define a Named Volume "database-data" to persist the PostgreSQL database
 volumes:
   database-data:
-#
-
-# Define the Named Volume "frontend-dist"
-# volumes:
-# frontend-dist:
-#
-
-#
-# Define a Network named "cloud-tracker-network"
-# networks:
-#   cloud-tracker-network:
-#
