--- a/kubernetes/frontend-service.yml
+++ b/kubernetes/frontend-service.yml
@@ -6,6 +6,7 @@ metadata:
 # spec defines the desired state of the Service
 spec:
   # the NodePort type - the service should be exposed externally using nodePort
+  # We shouldn't use a nodePort if we are using an Ingress...?
   # type: NodePort
   # the selector MATCHES the LABEL from the Deployment Pod Template
   selector:
