reverted to backend from backend-service - for docker

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -40,9 +40,9 @@ http {
         # reverse proxying
         location /api {
             # we use the docker container_name and the exposed port
-            # proxy_pass http://backend:4000;
+            proxy_pass http://backend:4000;
             # for Kubernetes:
-            proxy_pass http://backend-service:4000;
+            # proxy_pass http://backend-service:4000;
             proxy_set_header Host $http_host;
             proxy_http_version 1.1;
             # proxy_set_header X-Real-IP $remote_addr;
