aws cloudwatch metrics

--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,8 @@
 
 # Hosted
 # DB_SSL=true
+
+# CloudWatch Logging for Backend Routes
+# AWS_CLOUDWATCH_REGION=
+# AWS_CLOUDWATCH_ACCESS_KEY_ID=
+# AWS_CLOUDWATCH_SECRET_ACCESS_KEY=
