--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ POSTGRES_PASSWORD=password
 # note you must use the Docker Service Name "database" not "localhost" as we are inside a Docker Network
 DB_CONNECTION_STRING=postgresql://postgres:password@database/cloudtracker
 DB_SSL=false
+AWS_CLOUDWATCH_REGION=
+AWS_CLOUDWATCH_ACCESS_KEY_ID=
+AWS_CLOUDWATCH_SECRET_ACCESS_KEY=
 
 # cloud-tracker-frontend:
 # VITE_API_URL=http://localhost:4000
@@ -16,4 +19,4 @@ DB_SSL=false
 # but maybe we just use /api because of nginx
 # VITE_API_URL=/api/
 # test with full URL
-# VITE_API_URL=http://ec2-13-40-185-17.eu-west-2.compute.amazonaws.com:4000
+# VITE_API_URL=http://ec2-xxx-xxx-xxx-xxx.eu-west-2.compute.amazonaws.com:4000
