--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,10 +22,16 @@ EXPOSE 4000
 # define the arguments being passed to the Docker Run Command
 ARG DB_CONNECTION_STRING
 ARG DB_SSL
+ARG AWS_CLOUDWATCH_REGION
+ARG AWS_CLOUDWATCH_ACCESS_KEY_ID
+ARG AWS_CLOUDWATCH_SECRET_ACCESS_KEY
 
 # set the localised Environment Variables as those arguments
 ENV DB_CONNECTION_STRING=$DB_CONNECTION_STRING
 ENV DB_SSL=$DB_SSL
+ENV AWS_CLOUDWATCH_REGION=$AWS_CLOUDWATCH_REGION
+ENV AWS_CLOUDWATCH_ACCESS_KEY_=$AWS_CLOUDWATCH_ACCESS_KEY_
+ENV AWS_CLOUDWATCH_SECRET_ACCESS_KEY=$AWS_CLOUDWATCH_SECRET_ACCESS_KEY
 
 # Debug: Print the value of DB_CONNECTION_STRING and DB_SSL before starting
 # RUN echo "DB_CONNECTION_STRING is $DB_CONNECTION_STRING"
