--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
     environment:
       - DB_CONNECTION_STRING=${DB_CONNECTION_STRING}
       - DB_SSL=${DB_SSL}
+      - AWS_CLOUDWATCH_REGION=$AWS_CLOUDWATCH_REGION
+      - AWS_CLOUDWATCH_ACCESS_KEY_=$AWS_CLOUDWATCH_ACCESS_KEY_
+      - AWS_CLOUDWATCH_SECRET_ACCESS_KEY=$AWS_CLOUDWATCH_SECRET_ACCESS_KEY
     ports:
       - "4000:4000"
 
