--- a/backend/.env
+++ b/backend/.env
@@ -1,16 +1,16 @@
 # Local/Development/Testing
-DB_CONNECTION_STRING=postgresql://postgres:password@localhost:5432/cloudtracker
+# DB_CONNECTION_STRING=postgresql://postgres:password@localhost:5432/cloudtracker
 
 # Hosted
 # DB_CONNECTION_STRING=postgresql://xxxxxx:xxxxxx@xxxxxx:5432/cloudtracker
 
 # Local/Development/Testing
-DB_SSL=false
+# DB_SSL=false
 
 # Hosted
 # DB_SSL=true
 
 # CloudWatch Logging for Backend Routes
-AWS_CLOUDWATCH_REGION=eu-west-2
-AWS_CLOUDWATCH_ACCESS_KEY_ID=abc123
-AWS_CLOUDWATCH_SECRET_ACCESS_KEY=abc123
+# AWS_CLOUDWATCH_REGION=eu-west-2
+# AWS_CLOUDWATCH_ACCESS_KEY_ID=abc123
+# AWS_CLOUDWATCH_SECRET_ACCESS_KEY=abc123
