--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
 # env file for Docker Compose
 
 # cloud-tracker-database:
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
+# POSTGRES_USER=
+# POSTGRES_PASSWORD=
 
 # cloud-tracker-backend:
 # note you must use the Docker Service Name "database" not "localhost" as we are inside a Docker Network
-DB_CONNECTION_STRING=postgresql://postgres:password@database/cloudtracker
-DB_SSL=false
-AWS_CLOUDWATCH_REGION=
-AWS_CLOUDWATCH_ACCESS_KEY_ID=
-AWS_CLOUDWATCH_SECRET_ACCESS_KEY=
+# DB_CONNECTION_STRING=postgresql://postgres:password@database/cloudtracker
+# DB_SSL=false
+# AWS_CLOUDWATCH_REGION=
+# AWS_CLOUDWATCH_ACCESS_KEY_ID=
+# AWS_CLOUDWATCH_SECRET_ACCESS_KEY=
 
 # cloud-tracker-frontend:
 # VITE_API_URL=http://localhost:4000
 # note you use the Docker Service Name "backend" not "localhost" as we are inside a Docker Network
-# VITE_API_URL=http://baz.com/api
+# VITE_API_URL=http://backend:4000
 # but maybe we just use /api because of nginx
 # VITE_API_URL=/api/
 # test with full URL
