--- a/frontend/.env
+++ b/frontend/.env
@@ -14,3 +14,5 @@
 
 # EC2 Docker Containers with Compose WITH nginx
 # VITE_API_URL = (not strictly neccessary)
+
+# VITE_EC2_INTERNAL_IP = "1.1.1.1"
