--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@
 # VITE_API_URL=/api/
 # test with full URL
 # VITE_API_URL=http://ec2-xxx-xxx-xxx-xxx.eu-west-2.compute.amazonaws.com:4000
+# VITE_EC2_INTERNAL_IP='1.1.1.1"
