--- a/frontend/.env
+++ b/frontend/.env
@@ -1,18 +1,18 @@
 # Local/Development
 
-# VITE_API_URL = http://localhost:4000/
+# VITE_API_URL=http://localhost:4000/
 
 # Hosted
 
 # S3 to EC2 SEPARATE API:
 
 # BEFORE nginx
-# VITE_API_URL = http://ec2-xxx-xxx-xxx-xxx.eu-west-2.compute.amazonaws.com:4000/
+# VITE_API_URL=http://ec2-xxx-xxx-xxx-xxx.eu-west-2.compute.amazonaws.com:4000/
 
 # AFTER nginx
-# VITE_API_URL = http://ec2-xxx-xxx-xxx-xxx.eu-west-2.compute.amazonaws.com
+# VITE_API_URL=http://ec2-xxx-xxx-xxx-xxx.eu-west-2.compute.amazonaws.com
 
 # EC2 Docker Containers with Compose WITH nginx
-# VITE_API_URL = (not strictly neccessary)
+# VITE_API_URL=(not strictly neccessary)
 
-# VITE_EC2_INTERNAL_IP = "1.1.1.1"
+# VITE_EC2_INTERNAL_IP=1.1.1.1
