--- a/backend/.env
+++ b/backend/.env
@@ -11,6 +11,8 @@
 # DB_SSL=true
 
 # CloudWatch Logging for Backend Routes
-# AWS_CLOUDWATCH_REGION=
-# AWS_CLOUDWATCH_ACCESS_KEY_ID=
-# AWS_CLOUDWATCH_SECRET_ACCESS_KEY=
+# AWS_CLOUDWATCH_REGION=eu-west-2
+# AWS_CLOUDWATCH_ACCESS_KEY_ID=abc123
+# AWS_CLOUDWATCH_SECRET_ACCESS_KEY=abc123
+
+# EC2_INTERNAL_IP=1.1.1.1
