--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build the Docker Images
+        # we could pass ARGs to the docker builds at this point, if necessary (eg. frontend api url) to bake it in
         run: |
           docker build -t bazmurphy/cloud-tracker-database:latest database
           docker build -t bazmurphy/cloud-tracker-backend:latest backend
